--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>BangNote</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <style>
       body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
+        height: 100dvh;
+        height: 100vh;
       }
     </style>
     <script src="main.js" type="module"></script>
